@@ -1,3 +1,8 @@
+2013-05-27 Riccardo Mottola <rm@gnu.org>
+
+	* AppController.m (dropAction: paths:)
+	Handle local file drop.
+
 2013-05-22 Riccardo Mottola <rm@gnu.org>
 
 	* AppController.m (performStoreFile)
